<resources>
    <string name="DoIT">ToDO1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet">Not Registered Yet?</string>
    <string name="sign_up">Sign Up</string>
</resources>