<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

    android:background="@drawable/images11"
    tools:context=".Fragments.InFragment">

    <!-- Image View -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:letterSpacing="0.1"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:textStyle="italic"
        android:layout_marginTop="120dp"
        android:gravity="center"/>


    <!-- Container for input fields and button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_gravity="center">

        <!-- Email Address Input -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:padding="13dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"/>

        <!-- Password Input -->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"

            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:padding="13dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"/>

        <!-- Reconfirm Password Input -->

        <!-- Sign Up Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/nextBTN"
            android:background="@drawable/rounded_corner"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/me"
            android:layout_marginTop="8dp"
            android:elevation="4dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_marginEnd="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="16sp"
            android:id="@+id/authTextView"
            android:textColor="@color/me"
            android:padding="0dp"

            />

    </LinearLayout>

</LinearLayout>
